# downloader

./: .gitignore  README.md  plan.md  pyproject.toml
app/: __init__.py  config.py  downloader.py  main.py  models.py  store.py  system.py  validators.py
app/static/: app.js  index.html  styles.css
tests/: test_downloader.py  test_store.py  test_validators.py
