[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-youtube-downloader"
version = "0.1.0"
description = "Local/internal one-off YouTube downloader MVP built with FastAPI and yt-dlp."
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "yt-dlp",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
include = ["app*"]
